--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -18,4 +18,4 @@ ruby:
    language put there. If you nees to get working programs delivered
    fast, you should add Ruby to your toolbox.
   price: 49.50
-  imange_url: ruby.jpeg
+  image_url: ruby.jpeg
