--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -3,13 +3,13 @@
 one:
   title: MyString1
   description: MyText
-  image_url: lorem.jpg
+  image_url: 'book_covers/lorem.jpg'
   price: 9.99
 
 two:
   title: MyString2
   description: MyText
-  image_url: lorem.jpg
+  image_url: 'book_covers/lorem.jpg'
   price: 9.99
 
 ruby:
@@ -19,4 +19,4 @@ ruby:
     laguage out there. If you need to ge working programs
     delivered fast, you should add Ruby to your toolbox.
   price: 49.50
-  image_url: ruby.jpg
+  image_url: 'book_covers/ruby.jpg'
